# justfill-mcp

./: .gitignore  GEMINI.md  LICENSE  README.md  gemini-extension.json  pyproject.toml  server.json
examples/n8n/: README.md  SUBMISSION.md  fill-pdf-ai-vision.json  fill-pdf-workflow.json
examples/n8n/assets/: deterministic-e2e-2026-07-20.json
src/justfill_mcp/: __init__.py  api_client.py  login.py  server.py  workspace.py
tests/: test_login.py  test_server.py  test_workspace.py
